--- a/light/android.hardware.light@2.0-service.payton.rc
+++ b/light/android.hardware.light@2.0-service.payton.rc
@@ -1,4 +1,4 @@
-service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.sdm660
+service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.payton
     class hal
     user system
     group system
