payton: switch to qcrild
- Get rid of init.class_main since payton is decommonized now
- Set required board flags and organize startup for qcrild
- Use radio 1.4 and set proper vendor.rild.libpath
- Patch qcril to support only RadioConfig::1.0 interface (taken form [1])

* ref [1] - https://github.com/Quallenauge/android_device_bq_msm8953-common/commit/74de4e8456d74cfbe4b720e488344aacbde52fad

--- a/rootdir/etc/init.payton.rc
+++ b/rootdir/etc/init.payton.rc
@@ -47,3 +47,11 @@ on boot
     chown system system /sys/homebutton/key_screenoff_dbltap
     chown system system /sys/homebutton/key_screenoff_left
     chown system system /sys/homebutton/key_screenoff_right
+
+# Start qcrild
+    start vendor.qcrild
+
+# Start secondary qcrild instance if dual sim property set
+on property:persist.radio.multisim.config=dsds
+    start vendor.qcrild2
+        
