payton: MotoActions: add exported value for doze settings
* Stop crashing settings when searching for doze specific actions

--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -54,7 +54,8 @@
         <activity
             android:name=".DozeSettingsActivity"
             android:label="@string/ambient_display_gestures_title"
-            android:theme="@style/Theme.SubSettingsBase">
+            android:theme="@style/Theme.SubSettingsBase"
+            android:exported="true">
         </activity>
 
         <activity
